# minesweeper-rs

./: .gitignore  Cargo.toml  README.MD  minesweeper.html  rustfmt.toml
src/: gui.rs  logic.rs  main.rs  sprite_loader.rs  util.rs
src/gui/: board_render.rs  highlighter.rs  settings_menu.rs  seven_segment.rs  texture_store.rs  tile_render.rs  top_menu.rs  ui_event.rs
src/gui/top_menu/: flag_counter.rs  smile.rs  timer.rs
src/logic/: events.rs  game_board.rs  tile.rs  timer.rs
